- Added wxRawBitmap support
- Corrected Input method handler code (for Chinese etc.) and its
  interaction with wxWidgets' events.

wxMac:

- Vertical sliders oriented consistent with MSW/GTK (0 at top) (Kevin Hock)
- wxDynamicLibrary::GetDllExt() now returns ".bundle", not ".dylib"
- wxDynamicLibrary::GetSymbol() now prepends underscore to the symbol name

wxMSW:

- fixed enhanced metafiles loading from files (Andreas Goebel)
- wxRadioButtons no longer have to be consecutive in a group
- fixed spurious selection of combobox text during resize
- pass correct tool id (and not always -1) to EVT_TOOL_RCLICKED() handler
- added wxRegKey::Export(file)

wxWinCE:
- Added support for MS Handheld PC 2000. This was done before 2.5.4,
  but not mentioned anywhere.
- Added (preliminary) support for sockets

wxUniv:

- wxBU_... button align flags support
- vertical notebook orientation support
- 3rd state support for checkboxes
- wxLB_SORT and wxCB_SORT now cause case-insensitive sorting

wxPalmOS:

- William Osborne has won and new port was born
  (see: "wxPalmOS porting challenge")
- polishing of the port (unnecessary 2.4 API compatibility, removed
  all wxMSW specific code which was base for the new port)
- enumeration of available volumes
- native wxPrefConfig around Preferences database
- native wxProgressDialog implementation
- native wxColourDialog implementation
- native wxSystemSettings colours
- native wxButton implementation
- native wxCheckBox implementation
- native wxSlider implementation
- native wxToggleButton implementation
- native wxRadioButton implementation
- native wxStaticText implementation


2.5.3
-----

All:

- support for large (>2 Gb) files in wxFile (Tim Kosse)
- number of fixes to wxPluginManager (Rick Brice, Hans Van Leemputten)
- fixed memory leak in wxURL when using a proxy (Steven Van Ingelgem)
- fixed bug in wxDateTime::Set(jdn) when DST was in effect
- fixed fatal bug in wxString when wxUSE_STL==1 (Kurt Granroth)