@@ -39,6 +39,7 @@ long ypos = -1;
 
 int winNumber = 1;
 
+int nButtons = 0;
 // Initialise this in OnInit, not statically
 bool MyApp::OnInit()
 {
@@ -85,7 +86,7 @@ bool MyApp::OnInit()
 
 #if wxUSE_STATUSBAR
     frame->CreateStatusBar();
-    frame->SetStatusText(wxT("Ready..."));
+    frame->SetStatusText(wxString::Format(wxT("Device [%s] (PID:[%i] MID:[%i]) Ready... # of joysticks:[%i]"), stick.GetProductName().c_str(), stick.GetProductId(), stick.GetManufacturerId(), stick.GetNumberJoysticks()));
 #endif // wxUSE_STATUSBAR
 
     frame->CenterOnScreen();
@@ -105,6 +106,7 @@ MyCanvas::MyCanvas(wxWindow *parent, const wxPoint& pos, const wxSize& size):
     wxScrolledWindow(parent, wxID_ANY, pos, size, wxSUNKEN_BORDER)
 {
     m_stick = new wxJoystick(wxJOYSTICK1);
+    nButtons = m_stick->GetNumberButtons();
     m_stick->SetCapture(this, 10);
 }
 
@@ -153,10 +155,18 @@ void MyCanvas::OnJoystickEvent(wxJoystickEvent& event)
 #if wxUSE_STATUSBAR
     wxString buf;
     if (event.ButtonDown())
-        buf.Printf(_T("Joystick (%d, %d) Fire!"), pt.x, pt.y);
+        buf.Printf(_T("Joystick (%d, %d) #%i Fire!"), pt.x, pt.y, event.GetButtonChange());
     else
-        buf.Printf(_T("Joystick (%d, %d)"), pt.x, pt.y);
+        buf.Printf(_T("Joystick (%d, %d)  "), pt.x, pt.y);
 
+/*
+    for(int i = 0; i < nButtons; ++i)
+    {
+        buf += wxString(wxT("[")) + 
+        ((event.GetButtonState() & (1 << i)) ? wxT("Y") : wxT("N")) + wxString(wxT("]"));
+    }
+*/
+    
     frame->SetStatusText(buf);
 #endif // wxUSE_STATUSBAR
 
